--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy Telegram Bot
 on:
   push:
     branches:
-      - main  # Change this to the branch you want to deploy from
+      - main  # Adjust to your desired branch
 
 jobs:
   deploy:
@@ -18,10 +18,10 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install dependencies
+      - name: Install Telegram bot dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install python-telegram-bot==20.0  # Install the required dependencies directly
 
       - name: Run the Telegram Bot
         env:
