--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: Deploy Telegram Bot
+name: Deploy
 
 on:
-  workflow_dispatch
   push:
     branches:
-      - main  # Adjust to your desired branch
+      - main  # Automatically runs on push to main
+  workflow_dispatch:  # Allows manual run from GitHub Actions
 
 jobs:
   deploy:
@@ -23,6 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install python-telegram-bot==20.0  # Install the required dependencies directly
+
       - name: Run the Telegram Bot
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
